Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                 <li><a href="#pipeline">Tech Pipeline</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#prototype">Prototype</a></li>
-                <li><a href="https://github.com/metaphyllc/hcna" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+                <li><a href="https://github.com/donkronk17/hcna" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
             </ul>
         </nav>
 
