Update GitHub links to new repository

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                 <strong>HCNA</strong> = the architecture | <strong>HCNA-3</strong> = first implementation (3 components) | Future: HCNA-4, HCNA-5, HCNA-N...
             </p>
             <div class="hero-cta">
-                <a href="https://github.com/metaphyllc/hcna" class="btn btn-primary" target="_blank">
+                <a href="https://github.com/donkronk17/hcna" class="btn btn-primary" target="_blank">
                     <i class="fab fa-github"></i> View on GitHub
                 </a>
                 <a href="#architecture" class="btn btn-secondary">
@@ -1108,7 +1108,7 @@
         </p>
 
         <div class="cta-buttons">
-            <a href="https://github.com/metaphyllc/hcna" class="btn btn-primary" target="_blank">
+            <a href="https://github.com/donkronk17/hcna" class="btn btn-primary" target="_blank">
                 <i class="fab fa-github"></i> Star on GitHub
             </a>
             <a href="https://metaphysicsandcomputing.com" class="btn btn-secondary" target="_blank">
@@ -1139,10 +1139,10 @@
             <div class="footer-section">
                 <h4>Resources</h4>
                 <ul class="footer-links">
-                    <li><a href="https://github.com/metaphyllc/hcna">GitHub Repository</a></li>
-                    <li><a href="https://github.com/metaphyllc/hcna/docs">Documentation</a></li>
-                    <li><a href="https://github.com/metaphyllc/hcna/issues">Report Issues</a></li>
-                    <li><a href="https://github.com/metaphyllc/hcna/blob/main/CONTRIBUTING.md">Contributing</a></li>
+                    <li><a href="https://github.com/donkronk17/hcna">GitHub Repository</a></li>
+                    <li><a href="https://github.com/donkronk17/hcna/docs">Documentation</a></li>
+                    <li><a href="https://github.com/donkronk17/hcna/issues">Report Issues</a></li>
+                    <li><a href="https://github.com/donkronk17/hcna/blob/main/CONTRIBUTING.md">Contributing</a></li>
                 </ul>
             </div>
 
